# miris-manager-client

./: .gitignore  Dockerfile  Makefile  README.md  conf.json.example  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-ci.yml
cm_client/: __init__.py  conf.json  conf.py  example_wol_relay.py  lib.py  long_polling.py  signing.py  ssh_tunnel.py
examples/: calendar_pretalx.py  fake_mediacoder.py  indico2mm.py  miris_token.py  mirismanagerclient  netcapture.py  ping_server.py  poll_profile.py  recorder_controller.py  screen_controller.py  send_message.py  wol_relay.py  wolrelay.service
mirismanagerclient/: __init__.py  client.py
mirismanagerclient/lib/: configuration.py  info.py  long_polling.py  signing.py  ssh_tunnel.py
mm_client/: __init__.py  client.py  conf.json  conf.py  lib.py  long_polling.py  signing.py  ssh_tunnel.py
mm_client/lib/: info.py  long_polling.py  signing.py  ssh_tunnel.py
tests/: conftest.py  test_client.py  test_conf.py  test_info.py  test_signature.py
tests/examples/: test_all_scripts_help.py
